# dero

./: .clang-format  .gitattributes  CMakeLists.txt  README.md  package.xml
config/: dero_carried_1.rviz
include/dero/: ekf_rio.hpp  math_tools.hpp  nav_convert.hpp  odr.h  radar_estimator.hpp  radar_point_cloud.hpp  run_ros2bag.hpp  scekf_dero.hpp  variable_define.hpp
launch/: dero_carried_1_ros2bag.launch.py  dero_carried_2_ros2bag.launch.py  dero_carried_3_ros2bag.launch.py  dero_carried_4_ros2bag.launch.py  dero_carried_5_ros2bag.launch.py  rio_carried_1_ros2bag.launch.py  rio_carried_2_ros2bag.launch.py  rio_carried_3_ros2bag.launch.py  rio_carried_4_ros2bag.launch.py  rio_carried_5_ros2bag.launch.py
results/: README.md  evaluation_config.yaml
results/carried_datasets/laptop/ekf_rio/laptop_ekf_rio_carried_1/: stamped_groundtruth.txt
results/carried_datasets/laptop/ekf_rio/laptop_ekf_rio_carried_2/: eval_cfg.yaml  stamped_groundtruth.txt
results/carried_datasets/laptop/ekf_rio/laptop_ekf_rio_carried_4/: stamped_groundtruth.txt
results/carried_datasets/laptop/ekf_rio/laptop_ekf_rio_carried_5/: stamped_groundtruth.txt
results/carried_datasets/laptop/scekf_dero/laptop_scekf_dero_carried_1/: stamped_traj_estimate.txt
results/carried_datasets/laptop/scekf_dero/laptop_scekf_dero_carried_2/: stamped_traj_estimate.txt
results/carried_datasets/laptop/scekf_dero/laptop_scekf_dero_carried_3/: stamped_groundtruth.txt  stamped_traj_estimate.txt
results/carried_datasets/laptop/scekf_dero/laptop_scekf_dero_carried_4/: stamped_traj_estimate.txt
results/carried_datasets/laptop/scekf_dero/laptop_scekf_dero_carried_5/: stamped_traj_estimate.txt
src/cores/: ekf_rio.cpp  odr.cpp  radar_estimator.cpp  run_ros2bag.cpp  scekf_dero.cpp
src/nodes/: scekf_dero_ros2bag_node.cpp
src/utils/: math_tools.cpp  nav_convert.cpp
